# snsw

./: .dockerignore  .gitignore  ADR  DOCKER_GUIDE.md  Dockerfile  Dockerfile.base  Dockerfile.cpu  Dockerfile.gpu  Dockerfile.optimized  KAGGLE_GUIDE.md  README.md  STAC  compose.gfwf.yml  docker-compose.cpu.yml  docker-compose.gfwf.yml  docker-compose.gpu.yml  docker-compose.yml  howtouse.md  hybrid_inference.py  kaggle_one_click_train.py  lora_poc.py  move-pytorch-to-models.ps1  pyproject.toml  qwen4.ipynb  requirements.txt  rora.ipynb  run-snsw.ps1  run.ps1  snsw-agent.ps1  train_xtts_lora.py
dev/: FIX_REPORT.md
doc/: orchestrator_design.md  ２CLAUD
docker/: disk_usage_report.json  docker-manager.ps1  find-large-files.ps1
docs/: ADR.md  ENV.md  MLDR.md  MODELS.md  STAC.md  TTS_MODELS_GUIDE.txt  UX.md  adr-000-index.md  adr-001-tech-stack.md  adr-002-environment.md  adr-003-model-strategy.md  adr-004-v2-reorganization.md  adr-005-quality-loop-design.md  adr-006-orchestrator-shusseuo.md  adr-007-ml-decision-process.md  adr-008-learning-plan.md  adr-009-skill-definition.md  adr-010-model-evaluation-criteria.md  adr-011-tts-model-selection.md  adr-012-audio-scoring.md  adr-013-dataset-pipeline.md  adr-014-training-strategy.md  adr-015-gui-mail-ordering.md  adr-016-v2-ux-agent-worker.md  adr-017-universal-agent-v2-v3-integration.md  guide-hybrid-usage.md  guide-hybrid.md  guide-kaggle.md  guide-system-usage.md  report-docker-optimization.md  tips
html/: js_inject.html  mecab_diff_analysis.html
plan/: 3
src/: README.md  diagnostician.py  download-common-models.py  (+26 more)
(+61 files in other folders)
