[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snsw"
version = "0.1.0"
description = "Shinsyo voice recreation project tooling (download/preprocess/transcribe/dataset)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.0",
  "rich>=13.0.0",
  "pydub>=0.25.1",
  "yt-dlp>=2024.1.0",
]

[project.optional-dependencies]
whisper = ["faster-whisper>=1.0.0"]
tts = ["TTS>=0.22.0"]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]

[project.scripts]
snsw = "snsw.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
